--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="heading">Infinity Scroll - Unsplash API</h1>
 
     <!-- loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="./css/loader.svg" alt="loader" />
     </div>
 
